# jenkins-trainee-1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
src/consumer_classes/: CMakeLists.txt  human.cpp  human.hpp
src/test_classes/: CMakeLists.txt  fio.cpp  fio.hpp  human_data.hpp
